--- a/app/src/main/res/layout/activity_stream.xml
+++ b/app/src/main/res/layout/activity_stream.xml
@@ -5,4 +5,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/background_dark"
-    tools:context="unibo.cvlab.pydnet.StreamActivity" />
+    tools:context="com.doubleeye.annotateworld.StreamActivity" />
