--- a/app/src/main/res/layout/camera_connection_fragment.xml
+++ b/app/src/main/res/layout/camera_connection_fragment.xml
@@ -14,13 +14,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <unibo.cvlab.pydnet.demo.AutoFitTextureView
+    <com.doubleeye.annotateworld.demo.AutoFitTextureView
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" />
 
-        <unibo.cvlab.pydnet.demo.OverlayView
+        <com.doubleeye.annotateworld.demo.OverlayView
             android:id="@+id/depth_overlay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
